Add school breadcrumb

--- a/src/app/features/post-login/school/school-detail/school-detail.component.html
+++ b/src/app/features/post-login/school/school-detail/school-detail.component.html
@@ -1,4 +1,17 @@
 <div class="container-fluid">
+  <tui-breadcrumbs
+    size="l"
+  >
+    <ng-container *ngFor="let item of breadCrumb">
+      <a
+        *tuiItem
+        tuiLink
+        [routerLink]="item.routerLink"
+      >
+        {{ item.caption }}
+      </a>
+    </ng-container>
+  </tui-breadcrumbs>
   <h5 class="mat-headline-5 fw-medium">Chi tiết trường</h5>
   <div class="row">
     <div class="col-md-6" *ngIf="school">
