--- a/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
+++ b/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
@@ -3,7 +3,7 @@
   href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
 />
 <p-toast key="error" position="top-right"></p-toast>
-<h5 class="mat-headline-5 fw-medium">Tra cứu tài liệu các trường</h5>
+<h5 class="mat-headline-5 fw-medium">Danh sách tài liệu các trường</h5>
 <div class="table-container">
   <div
     class="my-4 row advance-search px-3 d-flex flex-row justify-content-between"
