--- a/src/app/features/post-login/user/user-update/user-update.component.html
+++ b/src/app/features/post-login/user/user-update/user-update.component.html
@@ -1,4 +1,17 @@
 <div class="container-fluid">
+  <tui-breadcrumbs
+          size="l"
+  >
+    <ng-container *ngFor="let item of breadCrumb">
+      <a
+              *tuiItem
+              tuiLink
+              [routerLink]="item.routerLink"
+      >
+        {{ item.caption }}
+      </a>
+    </ng-container>
+  </tui-breadcrumbs>
   <h5 class="mat-headline-5">Cập nhật người dùng</h5>
   <form [formGroup]="updateForm">
     <div class="row">
