Update date picker create record

--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.scss
@@ -123,3 +123,16 @@
 .search-input {
   width: 400px;
 }
+
+:host ::ng-deep .p-dialog-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  .p-button {
+    background-color: $primary !important;
+    border-radius: 8px;
+    margin-left: 30px;
+    width: 150px;
+  }
+}
