--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -238,6 +238,6 @@
     </div>
   </div>
   <div class="w-100 d-flex justify-content-center align-items-center mt-3">
-    <button type="button" class="mb-1 complete-button" pButton *ngIf="!inspectionDocument.isChief" [class.disabled-action-button]="inspectionDocument.isChief && !inspectionDocument.canFinish">Hoàn thành</button>
+    <button type="button" class="mb-1 complete-button" pButton *ngIf="inspectionDocument && !inspectionDocument.isChief" [class.disabled-action-button]="inspectionDocument.isChief && !inspectionDocument.canFinish">Hoàn thành</button>
   </div>
 </div>
