Fix record detail bugs

--- a/src/app/features/post-login/inspection/record/update-record/update-record.component.html
+++ b/src/app/features/post-login/inspection/record/update-record/update-record.component.html
@@ -57,8 +57,15 @@
         </div>
       </div>
       <div class="record-deadline col-md-6 mt-1">
-        <label for="deadline" class="fw-medium">Hạn nộp<span class="p-error">*</span></label>
-        <input id="deadline" class="form-control" type="date" formControlName="deadline" [max]="endDate" [min]="startDate"/>
+        <label class="fw-medium">Hạn nộp<span class="p-error">*</span></label>
+        <tui-input-date
+                [min]="startDate"
+                [max]="endDate"
+                tuiUnfinishedValidator="Vui lòng chọn hạn nộp"
+                class="tui-date"
+                tuiTextfieldSize="m"
+                formControlName="deadline">
+        </tui-input-date>
         <div
           *ngIf="recordForm.controls?.['deadline']?.invalid && (recordForm.controls?.['deadline']?.touched ||recordForm.controls?.['deadline']?.dirty)">
                     <span *ngIf="recordForm.controls?.['deadline']?.errors?.['required']" class="p-error">
