--- a/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
+++ b/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
@@ -65,10 +65,10 @@
               />
               <div
                 *ngIf="documentForm.controls?.['documentName']?.invalid && (documentForm.controls?.['documentName']?.touched || documentForm.controls?.['documentName']?.dirty)">
-                <span *ngIf="documentForm.controls?.['documentName']?.errors?.['required']" class="p-error">
+                <span *ngIf="documentForm.controls?.['whitespace']?.errors?.['required'] || documentForm.controls?.['documentName']?.errors?.['required']" class="p-error">
                   Vui lòng điền tên tài liệu
                 </span>
-                <span *ngIf="documentForm.controls?.['documentName']?.errors?.['maxLength']" class="p-error">
+                <span *ngIf="documentForm.controls?.['documentName']?.errors?.['maxength']" class="p-error">
                   Tên tài liệu quá dài
                 </span>
               </div>
@@ -82,16 +82,16 @@
               />
               <div
                 *ngIf="documentForm.controls?.['documentCode']?.invalid && (documentForm.controls?.['documentCode']?.touched || documentForm.controls?.['documentCode']?.dirty)">
-                <span *ngIf="documentForm.controls?.['documentCode']?.errors?.['required']" class="p-error">
+                <span *ngIf="documentForm.controls?.['whitespace']?.errors?.['required'] || documentForm.controls?.['documentCode']?.errors?.['required']" class="p-error">
                   Vui lòng điền mã tài liệu
                 </span>
-                <span *ngIf="documentForm.controls?.['documentCode']?.errors?.['maxLength']" class="p-error">
+                <span *ngIf="documentForm.controls?.['documentCode']?.errors?.['maxlength']" class="p-error">
                   Mã tài liệu quá dài
                 </span>
               </div>
             </div>
             <div class="col-md-12">
-              <label class="fw-medium">Tài liệu<span class="p-error">*</span></label><br/>
+              <label class="fw-medium mb-2">Tài liệu<span class="p-error">*</span></label><br/>
               <div class="input-file">
                 <input
                   type="file"
