--- a/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
+++ b/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
@@ -17,11 +17,13 @@
   <app-loading-complete-dialog
     [width]="80"
     [height]="70"
+    [failed]="updateDocumentFailed"
     [visible]="updateDocumentSubmitted"
     [completed]="updateDocumentCompleted"
     [header]="'Cập nhật tài liệu'"
     [progress]="'Đang cập nhật tài liệu'"
     [complete]="'Cập nhật tài liệu thành công'"
+    [fail]="'Cập nhật tài liệu không thành công'"
   >
   </app-loading-complete-dialog>
   <app-loading-complete-dialog
