--- a/src/app/features/post-login/issue/create-issue/create-issue.component.html
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.html
@@ -1,7 +1,11 @@
-<app-issue-list-pop-up
+<app-issue-inspector-popup
   (popupInspectorVisibleChange)="changeInspectorVisible()"
   [popupInspectorVisible]="popupInspectorVisible"
-></app-issue-list-pop-up>
+  [inspectorList]="inspectors"
+  (selectedInspectorsList)="getInspectorIds($event)"
+  [inspectorListIsValid]="inspectorListIsValid"
+>
+</app-issue-inspector-popup>
 <div class="container-fluid">
   <tui-breadcrumbs
     size="l"
@@ -20,8 +24,8 @@
   <div class="row create-issue">
     <form class="row" [formGroup]="issueForm" (ngSubmit)="onSubmit()">
       <div class="form-content col-md-8">
-        <div class="issue-name mb-1">
-          <h6>Tên kế hoạch triển khai</h6>
+        <div class="issue-name mb-2">
+          <label class="fw-medium mb-1">Tên kế hoạch triển khai<span class="p-error">*</span></label>
           <input
             type="text"
             pInputText
@@ -29,9 +33,25 @@
             class="w-100"
             formControlName="issueName"
           />
+          <div
+            *ngIf="issueForm.controls?.['issueName']?.invalid && (issueForm.controls?.['issueName']?.touched ||issueForm.controls?.['issueName']?.dirty)"
+          >
+            <span
+              *ngIf="issueForm.controls?.['issueName']?.errors?.['whitespace'] || issueForm.controls?.['issueName']?.errors?.['required']"
+              class="p-error"
+            >
+              Vui lòng điền tên kế hoạch triển khai
+            </span>
+            <span
+              *ngIf="issueForm.controls?.['issueName']?.errors?.['maxlength']"
+              class="p-error"
+            >
+              Tên kế hoạch triển khai quá dài
+            </span>
+          </div>
         </div>
-        <div class="issue-detail mb-1">
-          <h6>Chi tiết</h6>
+        <div class="issue-detail mb-2">
+          <label class="fw-medium mb-1">Chi tiết<span class="p-error">*</span></label>
           <textarea
             type="text"
             pInputTextarea
@@ -40,41 +60,114 @@
             class="w-100"
             formControlName="issueDetail"
           ></textarea>
+          <div
+            *ngIf="issueForm.controls?.['issueDetail']?.invalid && (issueForm.controls?.['issueDetail']?.touched ||issueForm.controls?.['issueDetail']?.dirty)"
+          >
+            <span
+              *ngIf="issueForm.controls?.['issueDetail']?.errors?.['whitespace'] || issueForm.controls?.['issueDetail']?.errors?.['required']"
+              class="p-error"
+            >
+              Vui lòng điền tên kế hoạch triển khai
+            </span>
+            <span
+              *ngIf="issueForm.controls?.['issueDetail']?.errors?.['maxlength']"
+              class="p-error"
+            >
+              Tên kế hoạch triển khai quá dài
+            </span>
+          </div>
         </div>
-        <h6>Tài liệu công văn</h6>
+        <div class="col-md-6 mb-2">
+          <label class="fw-medium mb-1">Hạn nộp<span class="p-error">*</span></label>
+          <tui-input-date
+            tuiUnfinishedValidator="Vui lòng chọn hạn nộp"
+            [min]="tomorrow"
+            class="tui-date"
+            tuiTextfieldSize="m"
+            formControlName="endDate">
+          </tui-input-date>
+        </div>
+        <h6 class="mat-headline-6">Tài liệu công văn</h6>
         <div class="document" formGroupName="issueDocList">
           <div class="row document-item mb-4 border-top rounded py-3 mx-0" formGroupName="issueDoc_1">
             <div class="col-md-12 d-flex flex-row">
               <div class="col-md-6 pe-3">
-                <label>Tên tài liệu</label><br/>
+                <label class="fw-medium mb-1">Tên tài liệu<span class="p-error">*</span></label>
                 <input
                   pInputText
                   placeholder="Điền tên tài liệu"
                   formControlName="documentName"
                 />
+                <div
+                  *ngIf="
+                  documentFirstNameControls?.invalid &&
+                  (documentFirstNameControls?.touched || documentFirstNameControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentFirstNameControls?.errors?.['whitespace'] ||documentFirstNameControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng điền tên tài liệu
+                </span>
+                  <span
+                    *ngIf="documentFirstNameControls?.errors?.['maxlength']"
+                    class="p-error"
+                  >
+                  Tên tài liệu quá dài
+                </span>
+                </div>
               </div>
               <div class="col-md-3 pe-3">
-                <label>Loại tài liệu</label><br/>
-                <select title="docType" formControlName="documentTypeId" class="form-select"
-                        (change)="onChange1($event)">
-                  <option value="0" selected>Chọn loại tài liệu</option>
-                  <ng-container *ngFor="let type of docTypes_select_1">
-                    <option [value]="type.id"
-                            *ngIf="type.id != selectedValue_2 && type.id != selectedValue_3">{{type.name}}</option>
-                  </ng-container>
-                </select>
+                <label class="fw-medium mb-1">Loại tài liệu<span class="p-error">*</span></label>
+                <p-dropdown [options]="filterOptions(docTypes_select_1, selectedValue_2, selectedValue_3)"
+                            placeholder="Chọn loại tài liệu"
+                            (onChange)="onChange1($event)">
+                </p-dropdown>
+                <div
+                  *ngIf="
+                  documentFirstTypeControls?.invalid &&
+                  (documentFirstTypeControls?.touched || documentFirstTypeControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentFirstTypeControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn loại
+                </span>
+                </div>
               </div>
               <div class="col-md-3">
-                <label>Mã tài liệu</label><br/>
+                <label class="fw-medium mb-1">Mã tài liệu<span class="p-error">*</span></label>
                 <input
                   pInputText
                   placeholder="Điền mã tài liệu"
                   formControlName="documentCode"
                 />
+                <div
+                  *ngIf="
+                  documentFirstCodeControls?.invalid &&
+                  (documentFirstCodeControls?.touched || documentFirstCodeControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentFirstCodeControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng điền mã
+                </span>
+                  <span
+                    *ngIf="documentFirstCodeControls?.errors?.['maxlength']"
+                    class="p-error"
+                  >
+                  Tên tài liệu quá dài
+                </span>
+                </div>
               </div>
             </div>
             <div class="col-md-12">
-              <label>Tài liệu</label><br/>
+              <label class="fw-medium mb-1">Tài liệu<span class="p-error">*</span></label>
               <div class="input-file">
                 <input
                   type="file"
@@ -92,12 +185,25 @@
                   class="col-md-3"
                 ></button>
               </div>
+              <div
+                *ngIf="
+                  documentFirstFileControls?.invalid &&
+                  (documentFirstFileControls?.touched || documentFirstFileControls?.dirty)
+                "
+              >
+                <span
+                  *ngIf="documentFirstFileControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn tài liệu công văn
+                </span>
+              </div>
             </div>
           </div>
           <div class="row document-item mb-4 border-top rounded py-3 mx-0" formGroupName="issueDoc_2">
             <div class="col-md-12 d-flex flex-row">
               <div class="col-md-6 pe-3">
-                <label>Tên tài liệu</label><br/>
+                <label class="fw-medium mb-1">Tên tài liệu<span class="p-error">*</span></label>
                 <input
                   pInputText
                   placeholder="Điền tên tài liệu"
@@ -105,18 +211,14 @@
                 />
               </div>
               <div class="col-md-3 pe-3">
-                <label>Loại tài liệu</label><br/>
-                <select title="docType" formControlName="documentTypeId" class="form-select"
-                        (change)="onChange2($event)">
-                  <option value="0" selected>Chọn loại tài liệu</option>
-                  <ng-container *ngFor="let type of docTypes_select_2">
-                    <option [value]="type.id"
-                            *ngIf="type.id != selectedValue_1 && type.id != selectedValue_3">{{type.name}}</option>
-                  </ng-container>
-                </select>
+                <label class="fw-medium mb-1">Loại tài liệu<span class="p-error">*</span></label>
+                <p-dropdown [options]="filterOptions(docTypes_select_2, selectedValue_1, selectedValue_3)"
+                            placeholder="Chọn loại tài liệu"
+                            (onChange)="onChange2($event)">
+                </p-dropdown>
               </div>
               <div class="col-md-3">
-                <label>Mã tài liệu</label><br/>
+                <label class="fw-medium mb-1">Mã tài liệu<span class="p-error">*</span></label>
                 <input
                   pInputText
                   placeholder="Điền mã tài liệu"
@@ -125,7 +227,7 @@
               </div>
             </div>
             <div class="col-md-12">
-              <label>Tài liệu</label><br/>
+              <label class="fw-medium mb-1">Tài liệu<span class="p-error">*</span></label>
               <div class="input-file">
                 <input
                   type="file"
@@ -148,7 +250,7 @@
           <div class="row document-item mb-4 border-top rounded py-3 mx-0" formGroupName="issueDoc_3">
             <div class="col-md-12 d-flex flex-row">
               <div class="col-md-6 pe-3">
-                <label>Tên tài liệu</label><br/>
+                <label class="fw-medium mb-1">Tên tài liệu<span class="p-error">*</span></label>
                 <input
                   pInputText
                   placeholder="Điền tên tài liệu"
@@ -156,18 +258,14 @@
                 />
               </div>
               <div class="col-md-3 pe-3">
-                <label>Loại tài liệu</label><br/>
-                <select title="docType" formControlName="documentTypeId" class="form-select"
-                        (change)="onChange3($event)">
-                  <option value="0" selected>Chọn loại tài liệu</option>
-                  <ng-container *ngFor="let type of docTypes_select_3">
-                    <option [value]="type.id"
-                            *ngIf="type.id != selectedValue_1 && type.id != selectedValue_2">{{type.name}}</option>
-                  </ng-container>
-                </select>
+                <label class="fw-medium mb-1">Loại tài liệu<span class="p-error">*</span></label>
+                <p-dropdown [options]="filterOptions(docTypes_select_3, selectedValue_1, selectedValue_2)"
+                            placeholder="Chọn loại tài liệu"
+                            (onChange)="onChange3($event)">
+                </p-dropdown>
               </div>
               <div class="col-md-3">
-                <label>Mã tài liệu</label><br/>
+                <label class="fw-medium mb-1">Mã tài liệu<span class="p-error">*</span></label>
                 <input
                   pInputText
                   placeholder="Điền mã tài liệu"
@@ -176,7 +274,7 @@
               </div>
             </div>
             <div class="col-md-12">
-              <label>Tài liệu</label><br/>
+              <label class="fw-medium mb-1">Tài liệu<span class="p-error">*</span></label>
               <div class="input-file">
                 <input
                   type="file"
@@ -201,9 +299,22 @@
           <button class="btn text-white">Lưu kế hoạch</button>
         </div>
       </div>
-      <div class="col-md-4 h-25 d-flex justify-content-center align-items-center">
-        <app-issue-list-right-side (toggleIssueListPopup)="changeInspectorVisible()"></app-issue-list-right-side>
+      <div class="col-md-4 d-flex justify-content-start flex-column align-items-center">
+        <app-issue-inspector-list
+          class="w-100"
+          [listEditable]="true"
+          [selectedInspectors]="selectedInspectors"
+          (toggleIssueListPopup)="changeInspectorVisible()"
+          (resetList)="onResetList()"
+          (inspectorList)="getInspectorIds($event)"
+          (recreateInspectorList)="resetInspectorList()"
+        >
+        </app-issue-inspector-list>
       </div>
     </form>
   </div>
 </div>
+
+
+
+
